--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,8 @@ org.gradle.jvmargs     = -Xmx2048M
 archives_base_name     = ninjaphenix-container-library
 maven_group            = ninjaphenix
 
-mod_version            = 0.0.1
+# Note: Currently integrating into expanded storage, still needs to produce proper api artefacts before release.
+mod_version            = 0.0.1-alpha.1
 minecraft_version      = 1.17.1
 
 mod_java_version       = 16
