--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ archives_base_name     = ninjaphenix-container-library
 maven_group            = ninjaphenix
 
 # Note: Currently integrating into expanded storage, still needs to produce proper api artefacts before release.
-mod_version            = 1.0.0-pre
+mod_version            = 1.0.0-beta.1
 minecraft_version      = 1.17.1
 
 mod_java_version       = 16
