Set version to 1.0.0 as library should be feature complete without any bugs.

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,7 @@ org.gradle.jvmargs     = -Xmx2048M
 archives_base_name     = ninjaphenix-container-library
 maven_group            = ninjaphenix
 
-# Note: Currently integrating into expanded storage, still needs to produce proper api artefacts before release.
-mod_version            = 1.0.0-beta.1
+mod_version            = 1.0.0
 minecraft_version      = 1.17.1
 
 mod_java_version       = 16
