--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,3 @@
-public-f net.minecraft.world.inventory.Slot f_40221_ # Slot.y
-public net.minecraft.world.inventory.AbstractContainerMenu f_38841_ # AbstractContainerMenu.lastSlots
-public net.minecraft.world.inventory.AbstractContainerMenu f_150394_ # AbstractContainerMenu.remoteSlots
+public-f net.minecraft.inventory.container.Slot f_40221_ # Slot.y
+public net.minecraft.inventory.container.Container f_38841_ # Container.lastSlots
+public net.minecraft.inventory.container.Container f_150394_ # Container.slots
