--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-rei = "6.0.264-alpha"
+rei = "5.12.248"
 
 [libraries]
 # Common Deps
@@ -11,9 +11,9 @@ jei-api = { group = "mezz.jei", name = "jei-1.16.5", version = "7.7.1.121:api" }
 minecraft-fabric = { group = "com.mojang", name = "minecraft", version = "1.16.5" }
 fabric-loader = { group = "net.fabricmc", name = "fabric-loader", version = "0.11.6" }
 fabric-api = { group = "net.fabricmc.fabric-api", name = "fabric-api", version = "0.36.0+1.16" }
-rei = { group = "me.shedaniel", name = "RoughlyEnoughItems-fabric", version.ref = "rei" }
-rei-api = { group = "me.shedaniel", name = "RoughlyEnoughItems-api-fabric", version.ref = "rei" }
-modmenu = { group = "com.terraformersmc", name = "modmenu", version = "2.0.0-beta.7" }
+rei = { group = "me.shedaniel", name = "RoughlyEnoughItems", version.ref = "rei" }
+rei-api = { group = "me.shedaniel", name = "RoughlyEnoughItems-api", version.ref = "rei" }
+modmenu = { group = "com.terraformersmc", name = "modmenu", version = "1.16.20" }
 amecs-api = { group = "de.siphalor", name = "amecsapi-1.17", version = "1.1.+" }
 arrp = { group = "net.devtech", name = "arrp", version = "0.5.1" }
 [plugins]
