--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,3 @@
-public-f net.minecraft.inventory.container.Slot f_40221_ # Slot.y
-public net.minecraft.inventory.container.Container f_38841_ # Container.lastSlots
-public net.minecraft.inventory.container.Container f_150394_ # Container.slots
+public-f net.minecraft.inventory.container.Slot field_75221_f # Slot.y
+public net.minecraft.inventory.container.Container field_75153_a # Container.lastSlots
+public net.minecraft.inventory.container.Container field_75151_b # slots
