--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ archives_base_name     = ninjaphenix-container-library
 maven_group            = ninjaphenix
 
 mod_version            = 1.0.2
-minecraft_version      = 1.17.1
+minecraft_version      = 21w38a
+yarn_version           = 9
 
 mod_java_version       = 16
