--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,9 +8,9 @@ jetbrainAnnotations = { group = "org.jetbrains", name = "annotations", version =
 minecraft-forge = { group = "net.minecraftforge", name = "forge", version = "1.17.1-37.0.19" }
 jei-api = { group = "mezz.jei", name = "jei-1.17.1", version = "8.0.0.10:api" }
 # Fabric Deps
-minecraft-fabric = { group = "com.mojang", name = "minecraft", version = "1.17.1" }
-fabric-loader = { group = "net.fabricmc", name = "fabric-loader", version = "0.11.6" }
-fabric-api = { group = "net.fabricmc.fabric-api", name = "fabric-api", version = "0.36.1+1.17" }
+minecraft-fabric = { group = "com.mojang", name = "minecraft", version = "21w38a" }
+fabric-loader = { group = "net.fabricmc", name = "fabric-loader", version = "0.11.7" }
+fabric-api = { group = "net.fabricmc.fabric-api", name = "fabric-api", version = "0.40.4+1.18" }
 rei = { group = "me.shedaniel", name = "RoughlyEnoughItems-fabric", version.ref = "rei" }
 rei-api = { group = "me.shedaniel", name = "RoughlyEnoughItems-api-fabric", version.ref = "rei" }
 modmenu = { group = "com.terraformersmc", name = "modmenu", version = "2.0.0-beta.7" }
