--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,6 @@ maven_group            = ninjaphenix
 
 mod_version            = 1.2.0
 minecraft_version      = 1.17.1
+yarn_version           = 61
 
 mod_java_version       = 16
