Only use version catalogs for plugins.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,25 @@
-org.gradle.jvmargs     = -Xmx2048M
-
-archives_base_name     = ninjaphenix-container-library
-maven_group            = ninjaphenix
-
-mod_version            = 1.2.0
-minecraft_version      = 21w39a
-yarn_version           = 1
-
-mod_java_version       = 16
+org.gradle.jvmargs            = -Xmx2048M
+# region Mod Properties
+archives_base_name            = ninjaphenix-container-library
+maven_group                   = ninjaphenix
+mod_version                   = 1.2.0
+mod_java_version              = 16
+# endregion
+# region Common Dependencies
+minecraft_version             = 21w39a
+jetbrains_annotations_version = 22.0.0
+# endregion
+# region Fabric Dependencies
+fabric_loader_version         = 0.11.6
+fabric_api_version            = 0.36.1+1.17
+yarn_version                  = 7
+rei_version                   = 6.0.264-alpha
+modmenu_version               = 2.0.0-beta.7
+amecs_version                 = 1.1.+
+arrp_version                  = 0.5.1
+# endregion
+# region Forge Dependencies
+forge_version                 = 37.0.59
+jei_version                   = 8.0.0.10
+mixin_version                 = 0.8.4
+# endregion
