--- a/gradle.properties
+++ b/gradle.properties
@@ -10,11 +10,11 @@ minecraft_version             = 21w39a
 jetbrains_annotations_version = 22.0.0
 # endregion
 # region Fabric Dependencies
-fabric_loader_version         = 0.11.6
-fabric_api_version            = 0.36.1+1.17
+fabric_loader_version         = 0.11.7
+fabric_api_version            = 0.40.5+1.18
 yarn_version                  = 7
 rei_version                   = 6.0.264-alpha
-modmenu_version               = 2.0.0-beta.7
+modmenu_version               = 2.1.1
 amecs_version                 = 1.1.+
 arrp_version                  = 0.5.1
 # endregion
