First pass on 1.2.0 backport to 1.16.5, likely some issues

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,25 @@
-org.gradle.jvmargs     = -Xmx2048M
-
-archives_base_name     = ninjaphenix-container-library
-maven_group            = ninjaphenix
-
-mod_version            = 1.0.1
-minecraft_version      = 1.16.5
-
-mod_java_version       = 8
+org.gradle.jvmargs            = -Xmx2048M
+# region Mod Properties
+archives_base_name            = ninjaphenix-container-library
+maven_group                   = ninjaphenix
+mod_version                   = 1.2.0
+mod_java_version              = 8
+# endregion
+# region Common Dependencies
+minecraft_version             = 1.16.5
+jetbrains_annotations_version = 22.0.0
+# endregion
+# region Fabric Dependencies
+fabric_loader_version         = 0.11.6
+fabric_api_version            = 0.36.0+1.16
+yarn_version                  = 10
+rei_version                   = 5.12.248
+modmenu_version               = 1.16.20
+amecs_version                 = 1.1.+
+arrp_version                  = 0.5.1
+# endregion
+# region Forge Dependencies
+forge_version                 = 36.2.5
+jei_version                   = 7.7.1.121
+mixin_version                 = 0.8.4
+# endregion
