Add flan claim support, use fork of loom for a little longer.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,4 +5,4 @@ gradle-utils = { id = "com.gitlab.ninjaphenix.gradle-utils", version = "0.1.0-be
 gradle-forge = { id = "net.minecraftforge.gradle", version = "5.1.22" }
 gradle-mixin = { id = "org.spongepowered.mixin", version = "0.7-SNAPSHOT" }
 # Fabric Plugins
-gradle-loom = { id = "fabric-loom", version = "0.10-SNAPSHOT" }
+gradle-loom = { id = "fabric-loom", version = "0.10.local" }
