--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,7 @@ rei_version                   = 6.0.264-alpha
 modmenu_version               = 2.0.0-beta.7
 amecs_version                 = 1.1.+
 arrp_version                  = 0.5.1
+flan_version                  = 1.6.2
 # endregion
 # region Forge Dependencies
 forge_version                 = 37.0.59
