Add publish task to upload artifacts to curseforge and modrinth.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # To prevent mojang license warnings from showing, ffs
-org.gradle.logging.level      = quiet
+#org.gradle.logging.level      = quiet
 org.gradle.jvmargs            = -Xmx2048M
 # region Mod Properties
 archives_base_name            = ninjaphenix-container-library
@@ -25,4 +25,8 @@ flan_version                  = 1.6.2
 forge_version                 = 37.0.59
 jei_version                   = 8.0.0.10
 mixin_version                 = 0.8.4
+# endregion
+# region Publishing
+curseforge_project_id = 530668
+modrinth_project_id = TIhTvPdy
 # endregion
