--- a/gradle.properties
+++ b/gradle.properties
@@ -19,9 +19,14 @@ rei_version                   = 6.0.264-alpha
 modmenu_version               = 2.1.1
 amecs_version                 = 1.1.+
 arrp_version                  = 0.5.1
+flan_version                  = 1.6.2
 # endregion
 # region Forge Dependencies
 forge_version                 = 37.0.59
 jei_version                   = 8.0.0.10
 mixin_version                 = 0.8.4
+# endregion
+# region Publishing
+curseforge_project_id = 530668
+modrinth_project_id = TIhTvPdy
 # endregion
