--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # To prevent mojang license warnings from showing, ffs
-#org.gradle.logging.level      = quiet
+org.gradle.logging.level      = quiet
 org.gradle.jvmargs            = -Xmx2048M
 # region Mod Properties
 archives_base_name            = ninjaphenix-container-library
