--- a/gradle.properties
+++ b/gradle.properties
@@ -19,9 +19,14 @@ rei_version                   = 5.12.248
 modmenu_version               = 1.16.20
 amecs_version                 = 1.1.+
 arrp_version                  = 0.5.1
+flan_version                  = 1.6.2
 # endregion
 # region Forge Dependencies
 forge_version                 = 36.2.5
 jei_version                   = 7.7.1.121
 mixin_version                 = 0.8.4
+# endregion
+# region Publishing
+curseforge_project_id = 530668
+modrinth_project_id = TIhTvPdy
 # endregion
