--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,7 @@ modmenu_version               = 2.0.0-beta.7
 amecs_version                 = 1.1.+
 arrp_version                  = 0.5.1
 flan_version                  = 1.6.2
+ipn_version                   = 1.1.0
 # endregion
 # region Forge Dependencies
 forge_version                 = 37.0.59
