--- a/gradle.properties
+++ b/gradle.properties
@@ -4,22 +4,23 @@ org.gradle.jvmargs            = -Xmx2048M
 # region Mod Properties
 archives_base_name            = ninjaphenix-container-library
 maven_group                   = ninjaphenix
-mod_version                   = 1.2.2
+mod_version                   = 1.2.4
 mod_java_version              = 16
 # endregion
 # region Common Dependencies
-minecraft_version             = 21w40a
+minecraft_version             = 21w44a
 jetbrains_annotations_version = 22.0.0
 # endregion
 # region Fabric Dependencies
-fabric_loader_version         = 0.11.7
-fabric_api_version            = 0.40.7+1.18
-yarn_version                  = 1
+fabric_loader_version         = 0.12.5
+fabric_api_version            = 0.42.1+1.18
+yarn_version                  = 10
 rei_version                   = 6.0.264-alpha
 modmenu_version               = 2.1.1
 amecs_version                 = 1.1.+
 arrp_version                  = 0.5.1
 flan_version                  = 1.6.2
+ipn_version                   = 1.1.0
 # endregion
 # region Forge Dependencies
 forge_version                 = 37.0.59
