--- a/gradle.properties
+++ b/gradle.properties
@@ -5,18 +5,18 @@ org.gradle.jvmargs            = -Xmx2048M
 archives_base_name            = ninjaphenix-container-library
 maven_group                   = ninjaphenix
 mod_version                   = 1.2.5
-mod_java_version              = 16
+mod_java_version              = 17
 # endregion
 # region Common Dependencies
-minecraft_version             = 1.18-pre5
+minecraft_version             = 1.18-rc3
 jetbrains_annotations_version = 22.0.0
 # endregion
 # region Fabric Dependencies
 fabric_loader_version         = 0.12.5
-fabric_api_version            = 0.42.8+1.18
-yarn_version                  = 4
-rei_version                   = 6.0.264-alpha
-modmenu_version               = 2.1.1
+fabric_api_version            = 0.43.1+1.18
+yarn_version                  = 2
+rei_version                   = 7.0.339
+modmenu_version               = 3.0.0
 amecs_version                 = 1.1.+
 arrp_version                  = 0.5.1
 flan_version                  = 1.6.2
