Update to 1.18 release.

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,28 +4,30 @@ org.gradle.jvmargs            = -Xmx2048M
 # region Mod Properties
 archives_base_name            = ninjaphenix-container-library
 maven_group                   = ninjaphenix
-mod_version                   = 1.2.5
+mod_version                   = 1.2.6
 mod_java_version              = 17
 # endregion
 # region Common Dependencies
-minecraft_version             = 1.18-rc3
+minecraft_version             = 1.18
 jetbrains_annotations_version = 22.0.0
 # endregion
 # region Fabric Dependencies
 fabric_loader_version         = 0.12.5
-fabric_api_version            = 0.43.1+1.18
-yarn_version                  = 2
+fabric_api_version            = 0.44.0+1.18
+yarn_version                  = 1
 rei_version                   = 7.0.339
 modmenu_version               = 3.0.0
 amecs_version                 = 1.1.+
 arrp_version                  = 0.5.1
 flan_version                  = 1.6.2
 ipn_version                   = 1.1.0
+ipn_minecraft_version         = 1.17.1
 # endregion
 # region Forge Dependencies
-forge_version                 = 37.0.59
+forge_version                 = 38.0.14
+jei_minecraft_version         = 1.17.1
 jei_version                   = 8.0.0.10
-mixin_version                 = 0.8.4
+mixin_version                 = 0.8.5
 # endregion
 # region Publishing
 curseforge_project_id = 530668
