Add 1.18.1 to game version list.

--- a/gradle.properties
+++ b/gradle.properties
@@ -32,4 +32,5 @@ mixin_version                 = 0.8.5
 # region Publishing
 curseforge_project_id = 530668
 modrinth_project_id = TIhTvPdy
+extra_game_versions = 1.18.1
 # endregion
