--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -1,13 +1,9 @@
-template.platform = fabric
-template.commonProject = common
-template.producesReleaseArtifact = true
-
 fabric_api_version = 0.47.8+1.18.2
 
 access_widener_path = src/main/resources/ninjaphenix_container_lib.accessWidener
 
-rei_version                   = 7.0.339
-modmenu_version               = 3.0.0
-amecs_version                 = 1.1.+
-arrp_version                  = 0.5.5
-flan_version                  = 1.6.2
+rei_version = 7.3.443
+modmenu_version = 3.1.0
+amecs_version = 1.3.5+mc1.18-pre1
+arrp_version = 0.5.5
+flan_version = 1.7.4
