--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
-# To prevent mojang license warnings from showing, ffs
-org.gradle.logging.level      = quiet
-org.gradle.jvmargs            = -Xmx2048M
+org.gradle.jvmargs = -Xmx2048M
 # region Mod Properties
-archives_base_name            = ninjaphenix-container-library
+maven_group = ninjaphenix
+archives_base_name = ninjaphenix-container-library
 mod_id = ninjaphenix_container_lib
-mod_version                   = 1.3.0
+mod_version = 1.3.0
+minecraft_version = 1.18.2
 # endregion
-
-ipn_version                   = 1.1.0
-ipn_minecraft_version         = 1.17.1
+ipn_version = 1.3.5
+ipn_minecraft_version = 1.18.2
+architectury_version=4.0.29
 
 # region Fabric Dependencies
 fabric_loader_version = 0.13.2
