--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,21 @@
+# Gradle Properties
 org.gradle.jvmargs = -Xmx2048M
-# region Mod Properties
+
+# Mod Properties
 maven_group = ninjaphenix
 archives_base_name = ninjaphenix-container-library
 mod_id = ninjaphenix_container_lib
 mod_version = 1.3.0
 minecraft_version = 1.18.2
-# endregion
+
+# Common Dependencies
 ipn_version = 1.3.5
 ipn_minecraft_version = 1.18.2
-architectury_version=4.0.29
 
-# region Fabric Dependencies
+# Fabric Dependencies
 fabric_loader_version = 0.13.2
-# endregion
-# region Publishing
+
+# Publishing
 curseforge_project_id = 530668
 modrinth_project_id = TIhTvPdy
 extra_game_versions =
-# endregion
