Get forge project running, relocate platform specific code into a new sub-package

--- a/forge/gradle.properties
+++ b/forge/gradle.properties
@@ -1,8 +1,4 @@
-template.platform = forge
-template.commonProject = common
-template.producesReleaseArtifact = true
-template.usesMixins = true
-template.usesAccessTransformers = true
+loom.platform = forge
 
 forge_version = 40.0.1
 mixin_version = 0.8.5
