--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
     id "dev.architectury.loom" version "0.11.0-SNAPSHOT" apply false
     id "ninjaphenix.gradle.mod" version "6.2.0.6" apply false
+    id "com.github.johnrengelman.shadow" version "7.1.2" apply false
     //id("com.modrinth.minotaur").version("1.2.1")
     //id("com.matthewprenger.cursegradle").version("1.4.0")
 }
