--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -1,4 +1,9 @@
+template.platform = fabric
+template.commonProject = common
+template.producesReleaseArtifact = true
+
 fabric_api_version = 0.47.8+1.18.2
+
 rei_version = 7.3.443
 modmenu_version = 3.1.0
 amecs_version = 1.3.5+mc1.18-pre1
