--- a/forge/gradle.properties
+++ b/forge/gradle.properties
@@ -1,6 +1,7 @@
-loom.platform = forge
+template.platform = forge
+template.commonProject = common
+template.producesReleaseArtifact = true
 
-forge_version = 40.0.1
-mixin_version = 0.8.5
+forge_version = 40.0.18
 jei_minecraft_version = 1.17.1
 jei_version = 8.0.0.10
