Update to gradle plugin. Add basic quilt port using fabric.mod.json

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@
 org.gradle.jvmargs = -Xmx2048M
 
 # Mod Properties
+template.platform = root
 maven_group = ninjaphenix
 archives_base_name = ninjaphenix-container-library
 mod_id = ninjaphenix_container_lib
@@ -19,3 +20,5 @@ fabric_loader_version = 0.13.2
 curseforge_project_id = 530668
 modrinth_project_id = TIhTvPdy
 extra_game_versions =
+
+template.enabled_platforms = fabric,quilt,forge
