Update gradle plugin.

--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -1,6 +1,7 @@
 template.platform = fabric
 template.commonProject = common
 template.producesReleaseArtifact = true
+template.producesMavenArtifact = true
 
 fabric_api_version = 0.47.8+1.18.2
 
