--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs = -Xmx2048M
 
 # Mod Properties
 template.platform = root
-maven_group = ninjaphenix
+template.maven_artifact_id = container_library
 archives_base_name = ninjaphenix-container-library
 mod_id = ninjaphenix_container_lib
 mod_version = 1.3.4
