--- a/forge/gradle.properties
+++ b/forge/gradle.properties
@@ -1,6 +1,7 @@
 template.platform = forge
 template.commonProject = common
 template.producesReleaseArtifact = true
+template.producesMavenArtifact = true
 
 forge_version = 40.0.18
 jei_minecraft_version = 1.17.1
