--- a/quilt/gradle.properties
+++ b/quilt/gradle.properties
@@ -1,6 +1,7 @@
 template.platform = quilt
 template.commonProject = common
 template.producesReleaseArtifact = true
+template.producesMavenArtifact = true
 
 quilt_loader_version = 0.16.0-beta.7
 qsl_version = 1.1.0-beta.2+1.18.2-SNAPSHOT
