--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,10 @@
 # Gradle Properties
 org.gradle.jvmargs = -Xmx2048M
 
+minecraft_version = 1.18.2
+java_version = 17
+
 # Mod Properties
-template.platform = root
 template.maven_artifact_id = container_library
 archives_base_name = ninjaphenix-container-library
 mod_id = ninjaphenix_container_lib
