Partially update to 1.19

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 # Gradle Properties
 org.gradle.jvmargs = -Xmx2048M
 
-minecraft_version = 1.18.2
+minecraft_version = 1.19-pre1
 java_version = 17
 
 # Mod Properties
 template.maven_artifact_id = container-library
 archives_base_name = ellemes-container-library
 mod_id = ellemes_container_lib
-mod_version = 1.4.0-beta.2
+mod_version = 2.0.0-beta.1
 
 # Common Dependencies
 ipn_version = 1.3.5
@@ -22,4 +22,4 @@ curseforge_project_id = 530668
 modrinth_project_id = TIhTvPdy
 extra_game_versions =
 
-template.enabled_platforms = fabric,quilt,forge
+template.enabled_platforms = fabric
