--- a/gradle.properties
+++ b/gradle.properties
@@ -5,10 +5,10 @@ minecraft_version = 1.18.2
 java_version = 17
 
 # Mod Properties
-template.maven_artifact_id = container_library
+template.maven_artifact_id = container-library
 archives_base_name = ellemes-container-library
 mod_id = ellemes_container_lib
-mod_version = 1.3.4
+mod_version = 1.4.0-beta.1
 
 # Common Dependencies
 ipn_version = 1.3.5
