--- a/forge-test/src/main/resources/META-INF/mods.toml
+++ b/forge-test/src/main/resources/META-INF/mods.toml
@@ -1,10 +1,10 @@
 modLoader = "javafml"
 loaderVersion = "[38,)"
-issueTrackerURL = "https://github.com/NinjaPhenix/container-library/issues/"
+issueTrackerURL = "https://github.com/Ellemes/container-library/issues/"
 license = "0BSD"
 
 [[mods]]
-modId = "ninjaphenix_container_lib_test"
+modId = "ellemes_container_lib_test"
 version = "0.0.0"
-displayName = "NinjaPhenix's Container Library Tests"
-authors = "NinjaPhenix"
+displayName = "Ellemes' Container Library Tests"
+authors = "Ellemes"
