Publish quilt jar to CF, minor buildscript fixes.

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,7 @@ fabric_loader_version = 0.13.2
 
 # Publishing
 curseforge_project_id = 530668
-modrinth_project_id = TIhTvPdy
+modrinth_project_id = KV8SBboh
 extra_game_versions =
 
 template.enabled_platforms = fabric,quilt,forge
