--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -3,10 +3,10 @@ template.commonProject = common
 template.producesReleaseArtifact = true
 template.producesMavenArtifact = true
 
-fabric_api_version = 0.52.4+1.19
+fabric_api_version = 0.55.1+1.19
 
-rei_version = 7.3.443
-modmenu_version = 3.1.0
-amecs_version = 1.3.5+mc1.18-pre1
+rei_version = 9.0.466
+modmenu_version = 4.0.0-beta.4
+amecs_version = 1.3.6+mc22w17a
 arrp_version = 0.5.5
-flan_version = 1.7.4
+flan_version = 1.7.9
