--- a/gradle.properties
+++ b/gradle.properties
@@ -1,25 +1,25 @@
 # Gradle Properties
 org.gradle.jvmargs = -Xmx2048M
 
-minecraft_version = 1.19-pre1
+minecraft_version = 1.19-rc2
 java_version = 17
 
 # Mod Properties
 template.maven_artifact_id = container-library
 archives_base_name = ellemes-container-library
 mod_id = ellemes_container_lib
-mod_version = 2.0.0-beta.2
+mod_version = 2.0.0-beta.3
 
 # Common Dependencies
-ipn_version = 1.3.5
-ipn_minecraft_version = 1.18.2
+ipn_version = 1.5.0
+ipn_minecraft_version = 1.19-pre1
 
 # Fabric Dependencies
-fabric_loader_version = 0.13.2
+fabric_loader_version = 0.14.6
 
 # Publishing
 curseforge_project_id = 530668
-modrinth_project_id = TIhTvPdy
+modrinth_project_id = KV8SBboh
 extra_game_versions =
 
-template.enabled_platforms = fabric
+template.enabled_platforms = fabric,quilt
