--- a/quilt/gradle.properties
+++ b/quilt/gradle.properties
@@ -3,12 +3,12 @@ template.commonProject = common
 template.producesReleaseArtifact = true
 template.producesMavenArtifact = true
 
-quilt_loader_version = 0.16.0-beta.12
-qsl_version = 1.1.0-beta.2+1.18.2-SNAPSHOT
-fabric_api_version = 1.0.0-beta.2+0.48.0-1.18.2-SNAPSHOT
+quilt_loader_version = 0.17.0-beta.2
+qsl_version = 2.0.0-beta.2+1.19-rc2-SNAPSHOT
+fabric_api_version = 1.0.0-beta.17+0.55.1-1.18.2-SNAPSHOT
 
-rei_version = 7.3.443
-modmenu_version = 3.1.0
-amecs_version = 1.3.5+mc1.18-pre1
+rei_version = 9.0.466
+modmenu_version = 4.0.0-beta.4
+amecs_version = 1.3.6+mc22w17a
 arrp_version = 0.5.5
-flan_version = 1.7.4
+flan_version = 1.7.9
