Forge port to 1.19

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 # Gradle Properties
 org.gradle.jvmargs = -Xmx2048M
 
-minecraft_version = 1.19-rc2
+minecraft_version = 1.19
 java_version = 17
 
 # Mod Properties
 template.maven_artifact_id = container-library
 archives_base_name = ellemes-container-library
 mod_id = ellemes_container_lib
-mod_version = 2.0.0-beta.3
+mod_version = 2.0.0-beta.4
 
 # Common Dependencies
 ipn_version = 1.5.0
@@ -22,4 +22,4 @@ curseforge_project_id = 530668
 modrinth_project_id = KV8SBboh
 extra_game_versions =
 
-template.enabled_platforms = fabric,quilt
+template.enabled_platforms = fabric,quilt,forge
