--- a/forge/gradle.properties
+++ b/forge/gradle.properties
@@ -3,6 +3,10 @@ template.commonProject = common
 template.producesReleaseArtifact = true
 template.producesMavenArtifact = true
 
-forge_version = 41.0.0
+forge_version = 41.0.1
 jei_minecraft_version = 1.17.1
 jei_version = 8.0.0.10
+
+# Old IPN as it isn't ported yet
+ipn_version = 1.3.5
+ipn_minecraft_version = 1.18.2
