--- a/quilt/gradle.properties
+++ b/quilt/gradle.properties
@@ -4,7 +4,7 @@ template.producesReleaseArtifact = true
 template.producesMavenArtifact = true
 
 quilt_loader_version = 0.17.0-beta.2
-qsl_version = 2.0.0-beta.2+1.19-rc2-SNAPSHOT
+qsl_version = 2.0.0-beta.2+1.19-SNAPSHOT
 fabric_api_version = 1.0.0-beta.17+0.55.1-1.18.2-SNAPSHOT
 
 rei_version = 9.0.466
