--- a/quilt/gradle.properties
+++ b/quilt/gradle.properties
@@ -5,7 +5,7 @@ template.producesMavenArtifact = true
 
 quilt_loader_version = 0.17.0-beta.2
 qsl_version = 2.0.0-beta.2+1.19-SNAPSHOT
-fabric_api_version = 1.0.0-beta.17+0.55.1-1.18.2-SNAPSHOT
+fabric_api_version = 2.0.0-alpha.2+0.55.3-1.19-SNAPSHOT
 
 rei_version = 9.0.466
 modmenu_version = 4.0.0-beta.4
