Update project to abstract common fabric and quilt code.

--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -1,12 +1,7 @@
 template.platform = fabric
-template.commonProject = common
+template.common_projects = thread,common
+template.copy_aw_from = common
 template.producesReleaseArtifact = true
 template.producesMavenArtifact = true
 
 fabric_api_version = 0.55.2+1.19
-
-rei_version = 9.0.466
-modmenu_version = 4.0.0-beta.4
-amecs_version = 1.3.6+mc22w17a
-arrp_version = 0.5.5
-flan_version = 1.7.9
