--- a/forge/gradle.properties
+++ b/forge/gradle.properties
@@ -1,5 +1,6 @@
 template.platform = forge
-template.commonProject = common
+template.common_projects = common
+template.copy_aw_from = common
 template.producesReleaseArtifact = true
 template.producesMavenArtifact = true
 
