--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,9 @@ curseforge_project_id = 530668
 modrinth_project_id = KV8SBboh
 extra_game_versions =
 
-template.enabled_platforms = fabric,quilt,forge
+# Mod Versions for Thread
+rei_version = 9.0.466
+modmenu_version = 4.0.0-beta.4
+amecs_version = 1.3.6+mc22w17a
+arrp_version = 0.5.5
+flan_version = 1.7.9
