--- a/quilt/gradle.properties
+++ b/quilt/gradle.properties
@@ -1,14 +1,9 @@
 template.platform = quilt
-template.commonProject = common
+template.common_projects = thread,common
+template.copy_aw_from = common
 template.producesReleaseArtifact = true
 template.producesMavenArtifact = true
 
 quilt_loader_version = 0.17.0-beta.2
 qsl_version = 2.0.0-beta.2+1.19-SNAPSHOT
 fabric_api_version = 2.0.0-alpha.2+0.55.3-1.19-SNAPSHOT
-
-rei_version = 9.0.466
-modmenu_version = 4.0.0-beta.4
-amecs_version = 1.3.6+mc22w17a
-arrp_version = 0.5.5
-flan_version = 1.7.9
