--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ java_version = 17
 template.maven_artifact_id = container-library
 archives_base_name = ellemes-container-library
 mod_id = ellemes_container_lib
-mod_version = 2.0.0-beta.4
+mod_version = 2.0.0
 
 # Common Dependencies
 ipn_version = 1.5.0
